--- a/_responsive.scss
+++ b/_responsive.scss
@@ -15,6 +15,11 @@ $bits-responsive-breakpoints: /* 1 */ (
   (v3 "(min-width: 50em)")
 ) !default;
 
+
+
+/* Mixins
+   ========================================================================== */
+
 /**
  * Inserts media query
  *
