--- a/_responsive.scss
+++ b/_responsive.scss
@@ -1,5 +1,5 @@
 /* ==========================================================================
-   Mixins used in responsive webdesign
+   Helpers used in responsive webdesign
    ========================================================================== */
 
 /**
