--- a/_responsive.scss
+++ b/_responsive.scss
@@ -8,6 +8,8 @@
  * It is recommended to override these.
  *
  * 1. List of available breakpoints.
+ * 2. If it is an old IE, don't serve any media query.
+ * 3. If it is an old IE, what breakpoints to include.
  */
 
 $bits-responsive-breakpoints: /* 1 */ (
@@ -15,16 +17,19 @@ $bits-responsive-breakpoints: /* 1 */ (
   (v3 "(min-width: 50em)")
 ) !default;
 
+$bits-old-ie: false !default; /* 2 */
+$bits-old-ie-breakpoints: () !default; /* 3 */
 
 
 /* Mixins
    ========================================================================== */
 
 /**
- * Inserts media query
+ * Insert media query
  *
  * --------------
  * Example usage:
+ * --------------
  *
  * $bits-responsive-breakpoints: (
  *   (v2 "min-width: 25em")
@@ -54,13 +59,22 @@ $bits-responsive-breakpoints: /* 1 */ (
     @if $name == $breakpoint-name {
       $breakpoint-found: true;
 
-      @media only screen and #{$media-query} {
-        @content;
+      @if $bits-old-ie == true { /* 1 */
+        @each $ie-bp in $bits-old-ie-breakpoints {
+          @if $name == $ie-bp {
+            @content;
+          }
+        }
+      }
+      @else {
+        @media only screen and #{$media-query} {
+          @content;
+        }
       }
     }
   }
 
   @if $breakpoint-found == false {
-    @warn "Breakpoint ‘#{$name}’ does not exist.";
+    @warn "Breakpoint '#{$name}' does not exist.";
   }
 }
